# git-commit

./: .gitignore  Dockerfile  README.md  app.py  build_project.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
dao/: clip_dao.py  task_dao.py
env/: models.py  montage_env.py  reward_engine.py  state_manager.py
graders/: grader_easy.py  grader_hard.py  grader_medium.py
infra/: config.py  utils.py
project_montage/: Dockerfile  README.md  inference.py  openenv.yaml  setup.md
project_montage/dao/: clip_dao.py  task_dao.py
project_montage/env/: models.py  montage_env.py  reward_engine.py  state_manager.py
project_montage/graders/: grader_easy.py  grader_hard.py  grader_medium.py
project_montage/infra/: config.py  utils.py
project_montage/tests/: test_env.py  test_graders.py  test_reward.py
server/: app.py
tests/: test_env.py  test_graders.py  test_reward.py  test_server.py
