[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montage-openenv"
version = "1.0.0"
description = "OpenEnv-compatible sequential video editing decision environment for RL agent training."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["openenv", "video-editing", "montage", "rl", "agent", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "openai>=1.50.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/bhumikalalwani/git-commit"
Repository = "https://github.com/Bhumikalalwani/git-commit"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
